--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -37,6 +37,20 @@
     padding: 0px;
   }
 
+  .col-10{
+    flex: 10%;
+    max-width: 10%;
+    background-color: white;
+    padding: 0px;
+  }
+
+  .col-80{
+    flex: 80%;
+    max-width: 80%;
+    background-color: white;
+    padding: 0px;
+  }
+
 .footer {
     position: absolute;
     padding: 40px;
@@ -107,3 +121,12 @@
   .motorcycle-info p { 
     font-size: 16px; 
   } 
+
+  .about-view {
+    text-align: center;
+    padding: 20px;
+    margin: 10px;
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+  }
