--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -98,11 +98,24 @@
   }
 
   .contact-form {
+    margin-top: 150px;
     padding: 20px;
-    margin: 10px;
   }
 
   .motorcycle-info { 
+    width: 300px;
+    height: 250px;
+    background-color: #f8f8f8; 
+    padding: 20px; 
+    border: 1px solid #ddd; 
+    border-radius: 5px; 
+    margin: 10px; 
+    display: flex; 
+    flex-direction: column; 
+    gap: 10px; 
+  } 
+
+  .contacts-info { 
     background-color: #f8f8f8; 
     padding: 20px; 
     border: 1px solid #ddd; 
