Finálne úpravy, úprava kódu podľa zásad používania Vue.js

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -52,11 +52,11 @@
   }
 
 .footer {
+    margin-top: 12%;
     position: absolute;
     padding: 40px;
     font-size: medium;
     background: rgb(241, 240, 240);
-    bottom: 0px;
     width: 100%;
   }
 
